# SentientCrawlers

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
SentientCrawlers/: CMakeLists.txt  main.cpp
SentientCrawlers/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
SentientCrawlers/Resources/: ResourceManager.cpp  ResourceManager.h
SentientCrawlers/Simulator/: Brain.cpp  Brain.h  CSVReader.cpp  CSVReader.h  CollegeBar.cpp  CollegeBar.h  Crawler.cpp  Crawler.h  Map.cpp  Map.h  Point.cpp  Point.h  RiverPoint.h  Simulator.cpp  Simulator.h  colorutils.cpp
SentientCrawlers/UI/: App.cpp  App.h  Image.cpp  Image.h  Interface.cpp  Interface.h  Renderer.cpp  Renderer.h  ShowcaseRenderer.cpp  ShowcaseRenderer.h  TrainingRenderer.cpp  TrainingRenderer.h  colorutils.cpp  colorutils.h  err.cpp  err.h  glall.h  glerr.cpp  glerr.h  init.cpp  init.h  theme.cpp  theme.h
sc_resources/: bars.csv  bridges.csv  river.csv
